# version 0.61.3
17/10/2018
    - Updated NamedVCLoader to be optional (margaretha)
    - Updated annotation tables & implemented key-value structure (margaretha)
    - Added annotation parser for annotation data from kalamar (margaretha)
    - Implemented parsing free resource info from json (margaretha)
22/10/2018
    - Updated jetty, spring and hibernate versions (margaretha)
    - Fixed annotation order & added tests (margaretha)

# version 0.61.2
12/09/2018
    - Added various log4j2 configurations (margaretha)
13/09/2018
    - Implemented VirtualCorpusRewrite (margaretha)
14/09/2018
    - Fixed SpringJerseyTest ApplicationContext (margaretha)
    - Handled VCRef with username in VirtualCorpusRewrite (margaretha)
    - Enabled VCReferenceTest in maven test suite (margaretha)
18/09/2018
    - Handled unique constraints / inserting duplicate items to DB (margaretha)
    - Added a controller for editing user group member roles (margaretha)
19/09/2018
    - Fixed cached-VC ref with username (margaretha)   

# version 0.61.1
28/08/2018
    - Added API URL versioning (margaretha)
    - Deactivated IdRewrite (margaretha)
    - Fixed kustvakt controller (margaretha)
30/08/2018
    - Fixed root packages & added api version properties in kustvakt.conf (margaretha)
    - Fixed versioning in SearchController (margaretha)
    - Added API versioning tests (margaretha)

# version 0.61.0

02/08/2018
	- Added VC referencing tests (margaretha)	
	- Implemented loading and caching named VCs (margaretha)
03/08/2018	
    - Implemented OAuth2 revoke token (margaretha)
	- Updated OAuth2 refresh token implementation (margaretha)
14/08/2018	
	- Implemented revoke all OAuth2 access tokens and authorization codes of client  
	  users when deregistering/deleting a client (margaretha)
	- Fixed update OAuth2 access token (margaretha)
	- Implemented reset client secret (margaretha)
	- Fixed revoking latest access token when refreshing OAuth2 access token (margaretha)
15/08/2018